<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatchingShape</string>
    <string name="startText">Connect</string>
    <string name="instructionText">Make sure you are paired with the device "ledpi-teco". Then, click the button to connect to the LED matrix and display the pattern.</string>
    <string name="preferences_bluetooth_category">Bluetooth</string>
    <string name="preferences_bluetooth_select_device_title">Select paired device</string>
    <string name="preferences_bluetooth_select_device_summary">ConnectionMachine</string>
    <string name="preferences_category_about">About</string>
    <string name="preferences_button_about_title">David Greiner</string>
    <string name="preferences_button_about_summary">© 2015 ultitech.de</string>
    <string name="about_url">http://www.ultitech.de</string>
    <string name="bluetooth_no_adapter_available">No bluetooth installed</string>
    <string name="bluetooth_not_enabled">Bluetooth is turned off</string>
    <string name="bluetooth_no_devices_available">No paired devices</string>
    <string name="settings">Settings</string>
    <string name="Hard">Hard</string>
    <string name="gameplay_bluetooth_category">Gameplay</string>
    <string name="preferences_gameplay_vibrate">Vibrate</string>

</resources>
